// Message error types for curp client
syntax = "proto3";

import "google/protobuf/empty.proto";

package errorpb;

message ProposeError {
    oneof propose_error {
        google.protobuf.Empty key_conflict = 1;
        google.protobuf.Empty duplicated = 2;
        WaitSyncError wait_sync_error = 3;
        string encode_error = 4;
        google.protobuf.Empty not_leader = 5;
        google.protobuf.Empty shutdown = 6;
    }
}

message CommandSyncError {
    oneof command_sync_error {
        WaitSyncError wait_sync = 1;
        // The serialized command error
        // The original type is Command::Error
        bytes execute = 2;
        // The serialized command error
        // The original type is Command::Error
        bytes after_sync = 3;
        google.protobuf.Empty shutdown = 4;
    }
}

message WaitSyncError {
    oneof wait_sync_error {
        RedirectData redirect = 1;
        string other = 2;
    }
}

message RedirectData {
    optional uint64 server_id = 1;
    uint64 term = 2;
}
